      activity statistics.
    * server_status.php: Removed InnoDB Status sub-page. It is now part of
      server_engines.php.
    * lang/*.inc.php, libraries/engines/innodb.lib.php: Buffer pool size
      indicators.
    * libraries/mysql_charsets.lib.php: Don't check the character set of the
      virtual database "information_schema" (MySQL 5.0).

2005-03-05 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_alter.php, tbl_addfield.php, db_datadict.php, pdf_schema.php,
      tbl_create.php, libraries/common.lib.php, /relation.lib.php,
      /database_interface.lib.php: MySQL 4.1.x native comments

2005-03-05 Alexander M. Turek  <me@derrabus.de>
    * server_engines.php, lang/*.inc.php, libraries/storage_engines.lib.php
      libraries/engines/berkeleydb.lib.php, libraries/engines/bdb.lib.php,
      libraries/engines/innobase.lib.php, libraries/innodb.lib.php,
      libraries/engines/myisam.lib.php:
      - Moved engine-specific settings into plugins;
      - Added ability to create multiple sub-pages in server_engines.php for
        a specific engine;
      - Added a few InnoDB variables. To be continued. :-)
      - New InnoDB buffer pool monitor for MySQL >= 5.0.2.

2005-03-04 Marc Delisle  <lem9@users.sourceforge.net>
    * Documentation.html, libraries/common.lib.php: new FAQ 2.8 about
      Missing parameters, and when the error happens, show a link to FAQ

2005-03-03 Alexander M. Turek  <me@derrabus.de>
    * libraries/grab_globals.lib.php: Bug #1153079 (Updating columns starting
      with "str").
    * header.inc.php: Wrong icon for views.
    * libraries/sqlparser.data.php: Added more missing date / time functions.

2005-03-02 Michal Čihař  <michal@cihar.com>
    * libraries/export/sql.php, libraries/display_export.lib.php: Do not offer
      modes not available in current MySQL version, do not fail on error when
      setting SQL_MODE (bug #1155209).

2005-03-02 Marc Delisle  <lem9@users.sourceforge.net>